jellyfin/jellyfin-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: jellyfin
spec:
  containers:
  - name: jellyfin
    image: vijaytech96/cipheronic:1.0 
    ports:
    - containerPort: 8096
  imagePullSecrets:
  - name: dockerhub-secret
