jellyfin/jellyfin-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  type: ClusterIP
  selector:
    app: jellyfin
  ports:
  - port: 8096
    targetPort: 8096
